# chatondocker

./: .dockerignore  .gitignore  .markdownlint.yaml  Cargo.toml  Dockerfile  clippy.toml  config.example.yaml  rustfmt.toml
.github/workflows/: ci.yml
db/: schema.sql
src/: app.rs  config.rs  handlers.rs  lib.rs  main.rs  state.rs
tests/: integration_test.rs
